# fuel-price-signal

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  FUTURE_IDEAS.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
docs/: CONVENTIONS.md  ML_SIGNAL.md  STATUS.md  automation.md
experiments/: INDEX.md  TEMPLATE.md  TEMPLATE_paired_wfcv.py  results.csv
fuel_signal/: backtest.py  backtest_phase2.py  brand_leadership.py  calibrate.py  classify.py  cli.py  compare.py  config.py  cv_report.py  cycle.py  dates.py  db.py  evaluate.py  feature_diagnostics.py  feature_redundancy.py  features.py  fill.py  fn_cost.py  fp_cost.py  history.py  inspect.py  label_inspect.py  label_viz.py  labels.py  lga_leadership.py  live.py  loo_ablation.py  postcode_council.py  score_phase2.py  series.py  shap_report.py  signal.py  stations.py  tgp.py  tp_benefit.py  train_lgbm.py  train_logreg.py
tests/: conftest.py  test_backtest.py  test_backtest_phase2.py  test_brand_leadership.py  test_calibration.py  test_classify.py  test_cli.py  test_cv_report.py  test_cycle.py  test_db.py  test_evaluate.py  test_exp_lib_features.py  test_exp_lib_gates.py  test_exp_lib_rowpreds.py  test_exp_lib_zones.py  test_feature_diagnostics.py  test_feature_redundancy.py  test_features.py  test_fill.py  test_fn_cost.py  test_fp_cost.py  test_history.py  test_inspect.py  test_labels.py  test_lga_leadership.py  test_live.py  test_loo_ablation.py  test_phase2_eval.py  test_postcode_council.py  test_realised.py  test_score_phase2.py  test_series.py  test_signal.py  (+5 more)
(+303 files in other folders)
